force-app/main/default/objects/TaskAction__c/TaskAction__c.object-meta.xml
<CustomObject>
    <description>Entidade para gerenciamento das ações geradas pela interação com a tarefa, abertura e fechamento.</description>
    <label>Ação da tarefa</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>Nome de Task Action</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ações da tarefa</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>