force-app/main/default/objects/TaskAction__c/fields/CloseTask__c.field-meta.xml
<CustomField>
    <fullName>CloseTask__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finalizar tarefa?</label>
    <type>Checkbox</type>
</CustomField>