force-app/main/default/objects/TaskAction__c/fields/CommunicationType__c.field-meta.xml
<CustomField>
    <fullName>CommunicationType__c</fullName>
    <label>Communication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>whatsapp_hsm</fullName>
                <default>true</default>
                <label>WhatsApp HSM</label>
            </value>
            <value>
                <fullName>email</fullName>
                <label>E mail</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>