force-app/main/default/objects/TaskAction__c/fields/Destinatary__c.field-meta.xml
<CustomField>
    <fullName>Destinatary__c</fullName>
    <label>Destinatário</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Destinatary</valueSetName>
    </valueSet>
</CustomField>