force-app/main/default/objects/TaskAction__c/fields/LogicalExpression__c.field-meta.xml
<CustomField>
    <fullName>LogicalExpression__c</fullName>
    <label>Expressão lógica</label>
    <length>80</length>
    <type>Text</type>
</CustomField>