force-app/main/default/objects/TaskAction__c/fields/Recurrence__c.field-meta.xml
<CustomField>
    <fullName>Recurrence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recorrência</label>
    <type>Checkbox</type>
</CustomField>