force-app/main/default/objects/TaskAction__c/fields/RelativeField__c.field-meta.xml
<CustomField>
    <fullName>RelativeField__c</fullName>
    <label>Campo relativo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>