force-app/main/default/objects/TaskAction__c/fields/RelativeSObject__c.field-meta.xml
<CustomField>
    <fullName>RelativeSObject__c</fullName>
    <label>Objeto relativo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SObjectDefinition</valueSetName>
    </valueSet>
</CustomField>