force-app/main/default/objects/TaskAction__c/fields/TaskActionTarget__c.field-meta.xml
<CustomField>
    <fullName>TaskActionTarget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alvo Ação da tarefa</label>
    <referenceTo>TaskAction__c</referenceTo>
    <relationshipLabel>Ações da tarefa</relationshipLabel>
    <relationshipName>TaskActionTarget</relationshipName>
    <type>Lookup</type>
</CustomField>