force-app/main/default/objects/TaskAction__c/fields/TaskActionType__c.field-meta.xml
<CustomField>
    <fullName>TaskActionType__c</fullName>
    <label>Tipo de ação de tarefa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Batch (tempo)</fullName>
            </value>
            <value>
                <fullName>Trigger</fullName>
            </value>
            <value>
                <fullName>Fechamento de task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>