force-app/main/default/objects/TaskAction__c/fields/TaskManagement__c.field-meta.xml
<CustomField>
    <fullName>TaskManagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerenciamento de tarefas</label>
    <referenceTo>TaskManagement__c</referenceTo>
    <relationshipLabel>Ações da tarefa</relationshipLabel>
    <relationshipName>AcoesDaTarefa</relationshipName>
    <type>Lookup</type>
</CustomField>