force-app/main/default/objects/TaskAction__c/fields/TaskManagementTarget__c.field-meta.xml
<CustomField>
    <fullName>TaskManagementTarget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alvo Gerenciamento de tarefas</label>
    <referenceTo>TaskManagement__c</referenceTo>
    <relationshipLabel>Ações da tarefa (Alvo Gerenciamento de tarefas)</relationshipLabel>
    <relationshipName>TaskActionManagement</relationshipName>
    <type>Lookup</type>
</CustomField>