force-app/main/default/objects/TaskAction__c/fields/TaskManagerFlow__c.field-meta.xml
<CustomField>
    <fullName>TaskManagerFlow__c</fullName>
    <formula>TEXT(TaskManagement__r.Flow__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fluxo</label>
    <type>Text</type>
</CustomField>