force-app/main/default/objects/TaskAction__c/fields/TaskManagerType__c.field-meta.xml
<CustomField>
    <fullName>TaskManagerType__c</fullName>
    <formula>TEXT(TaskManagement__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tarefa</label>
    <type>Text</type>
</CustomField>