force-app/main/default/objects/TaskAction__c/fields/TaskType__c.field-meta.xml
<CustomField>
    <fullName>TaskType__c</fullName>
    <label>Tipo da tarefa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Close</fullName>
                <label>Fechamento</label>
            </value>
            <value>
                <fullName>Open</fullName>
                <label>Abertura</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>