force-app/main/default/objects/TaskAction__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <label>Template</label>
    <type>TextArea</type>
</CustomField>