force-app/main/default/objects/TaskAction__c/fields/TemplateName__c.field-meta.xml
<CustomField>
    <fullName>TemplateName__c</fullName>
    <label>Nome do Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TemplateName</valueSetName>
    </valueSet>
</CustomField>