force-app/main/default/objects/TaskAction__c/recordTypes/FieldUpdate.recordType-meta.xml
<RecordType>
    <fullName>FieldUpdate</fullName>
    <active>true</active>
    <label>Atualização de campos</label>
</RecordType>