force-app/main/default/objects/TaskAction__c/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <label>Geral</label>
</RecordType>