force-app/main/default/objects/TaskAction__c/recordTypes/MilestoneClosing.recordType-meta.xml
<RecordType>
    <fullName>MilestoneClosing</fullName>
    <active>true</active>
    <label>Fechamento de marco</label>
</RecordType>