force-app/main/default/objects/TaskAction__c/recordTypes/MilestoneOpening.recordType-meta.xml
<RecordType>
    <fullName>MilestoneOpening</fullName>
    <active>true</active>
    <label>Abertura de marco</label>
</RecordType>