force-app/main/default/objects/TaskAction__c/recordTypes/NewSchedule.recordType-meta.xml
<RecordType>
    <fullName>NewSchedule</fullName>
    <active>true</active>
    <label>Novo agendamento</label>
</RecordType>