force-app/main/default/objects/TaskAction__c/recordTypes/OutboundCommunication.recordType-meta.xml
<RecordType>
    <fullName>OutboundCommunication</fullName>
    <active>true</active>
    <label>Comunicação de Saída</label>
</RecordType>