force-app/main/default/objects/TaskAction__c/recordTypes/Parameters.recordType-meta.xml
<RecordType>
    <fullName>Parameters</fullName>
    <active>true</active>
    <label>Parâmetro</label>
</RecordType>