force-app/main/default/objects/TaskAction__c/recordTypes/SchedulingOpeningCriteria.recordType-meta.xml
<RecordType>
    <fullName>SchedulingOpeningCriteria</fullName>
    <active>true</active>
    <label>Critérios de abertura de agendamento</label>
</RecordType>