force-app/main/default/objects/TaskAction__c/recordTypes/TaskClosing.recordType-meta.xml
<RecordType>
    <fullName>TaskClosing</fullName>
    <active>true</active>
    <label>Fechamento de tarefa</label>
</RecordType>