force-app/main/default/objects/TaskAction__c/recordTypes/TaskOpening.recordType-meta.xml
<RecordType>
    <fullName>TaskOpening</fullName>
    <active>true</active>
    <label>Abertura de tarefa</label>
</RecordType>